# TruthfulnessCheck

./: README.md  build_and_upload.sh  pyproject.toml  requirements.txt
tests/: test_validate_places.py
truthfulnesscheck/: config.py  config.yaml  validate_places.py  validate_places_vbckp.py
truthfulnesscheck/utils/: NER_util.py  llm_util.py  maps_util.py  string_matcher_util.py
